--- a/sinaWeiBo-keyWordSearch-spider/scrapy.cfg
+++ b/sinaWeiBo-keyWordSearch-spider/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = weatherSpider.settings
+default = weiboKeyWordSearchSpider.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = weatherSpider
+project = weiboKeyWordSearchSpider
